--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -11,11 +11,11 @@ html {
 }
 
 body {
-    color: #161616;
+    color: var(--text-color);
 }
 
 a {
-    color: #161616;
+    color: var(--text-color);
 }
 
 .visually-hidden {
@@ -27,5 +27,5 @@ a {
 }
 
 .section-tagline {
-    color: #d73953;
+    color: var(--color-primary);
 }
