--- a/CSS_advanced/styles/6-style.css
+++ b/CSS_advanced/styles/6-style.css
@@ -10,9 +10,12 @@
 	--font-size-small: 1.2rem;
 	--font-size-medium: 1.6rem;
 	--font-size-large: 1.8rem;
-	--font-size-xlarge: 2.3rem;
-	--font-size-xxlarge: 4.8rem;
+	--font-size-x-large: 2.3rem;
+	--font-size-xx-large: 4.8rem;
+	--font-weight-regular: 400;
+	--font-weight-bold: 700;
 }
+
 html {
     scroll-behavior: smooth;
 	font-size: 62.5%;
@@ -22,6 +25,7 @@ body {
     color: var(--text-color);
 	font-family: var(--font-family-base);
 	font-size: var(--font-size-medium);
+	font-weight: var(--font-weight-regular);
 }
 
 a {
@@ -30,6 +34,7 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: var(--font-family-title);
+	font-weight: var(--font-weight-bold);
 }
 
 .visually-hidden {
