--- a/CSS_advanced/styles/11-style.css
+++ b/CSS_advanced/styles/11-style.css
@@ -17,6 +17,8 @@
 	--line-height-small: 1.2;
 	--line-height-base: 1.5;
 	--line-height-big: 1.8;
+	--section-header-align: center;
+	--section-tagline-transform: uppercase;
 }
 
 html {
@@ -50,6 +52,13 @@ h1, h2, h3, h4, h5, h6 {
     color: #d73953;
 }
 
+.section-header {
+	text-align: var(--section-header-align);
+}
+
 .section-tagline {
     color: var(--color-primary);
+	font-family: var(--font-family-title);
+	text-transform: var(--section-tagline-transform);
+	font-weight: var(--font-weight-bold);
 }
