--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -91,3 +91,9 @@ h1, h2, h3, h4, h5, h6 {
 	text-transform: var(--section-tagline-transform);
 	font-weight: var(--font-weight-bold);
 }
+
+.container {
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
+}
