Update navigation styles in CSS_advanced

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5, h6 {
 	text-align: center;
 }
 
-.nav-item {
+.nav .nav-item {
 	font-family: var(--nav-item-font-family);
 	font-weight: var(--nav-item-font-weight);
 	font-size: var(--nav-item-font-size);
@@ -150,7 +150,7 @@ h1, h2, h3, h4, h5, h6 {
 	margin: var(--nav-item-margin);
 }
 
-.nav-link {
+.nav .nav-link {
 	display: block;
 	padding: 0.5rem 1rem;
 }
