--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -37,6 +37,7 @@
 	--nav-item-display: inline-block;
 	--nav-item-margin: 0 0 3rem 0;
 	--nav-item-link-hover: var(--color-primary);
+	--section-tagline-margin: 0;
 }
 
 *, *::before, *::after {
@@ -118,6 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: var(--font-family-title);
 	text-transform: var(--section-tagline-transform);
 	font-weight: var(--font-weight-bold);
+	margin: var(--section-tagline-margin);
 }
 
 .container {
@@ -157,4 +159,28 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav .nav-link:hover {
 	color: var(--nav-item-link-hover);
+}
+
+ul.row {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.col-1-3 {
+	width: 33.33%;
+	float: left;
+	padding: 0.5rem;
+	}
+
+.col-1-2 {
+	width: 50%;
+	float: left;
+	padding: 0.5rem;
+}
+
+.footer-copyright {
+	margin: 0;
+	font-size: var(--font-size-small);
+	color: var(--color-dark-grey);
 }
