--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -29,6 +29,7 @@
 	--section-body-padding: 0 0 3rem;
 	--section-footer-padding: 3rem 0 0;
 	--section-footer-align: center;
+	--section-tagline-margin: 0;
 	--footer-padding: 5rem 0 1rem;
 	--nav-item-font-family: var(--font-family-title);
 	--nav-item-font-weight: var(--font-weight-bold);
@@ -37,10 +38,9 @@
 	--nav-item-display: inline-block;
 	--nav-item-margin: 0 0 3rem 0;
 	--nav-item-link-hover: var(--color-primary);
-	--section-tagline-margin: 0;
 }
 
-*, *::before, *::after {
+*, *:before, *:after {
 	box-sizing: border-box;
 }
 
@@ -89,7 +89,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .section {
 	padding: var(--section-padding);
-
 }
 
 .section-header {
