Update CSS styles for footer and navbar

--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -131,12 +131,16 @@ h1, h2, h3, h4, h5, h6 {
 	padding: var(--footer-padding);
 }
 
+.footer ul {
+	text-align: right;
+}
+
 .navbar-menu {
 	float: right;
 }
 
 .nav {
-	list-style-type: none;
+	list-style: none;
 	margin: 0;
 	padding: 0;
 	text-align: center;
@@ -181,5 +185,5 @@ ul.row {
 .footer-copyright {
 	margin: 0;
 	font-size: var(--font-size-small);
-	color: var(--color-dark-grey);
+	color: var(--text-color);
 }
