--- a/CSS_advanced/styles/22-style.css
+++ b/CSS_advanced/styles/22-style.css
@@ -198,5 +198,5 @@ ul.row {
 [data-section-theme="dark"] {
 	--text-color: var(--color-white);
 	--section-title-color: var(--color-white);
-	--background-color: var(--color-black);
+	background-color: var(--color-black);
 }
