--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -200,3 +200,15 @@ ul.row {
 	--section-title-color: var(--color-white);
 	background-color: var(--color-black);
 }
+
+.footer-address {
+	color: var(--text-color);
+}
+
+.social-link {
+	display: block;
+}
+
+.social-link > svg {
+	fill: var(--text-color);
+}
