--- a/CSS_advanced/styles/26-style.css
+++ b/CSS_advanced/styles/26-style.css
@@ -139,7 +139,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .card-testimonial .card-quote cite {
 	display: block;
-	margin-top: 1rem;
+	padding-top: 1rem;
 	color: var(--color-primary);
 }
 
