--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -47,6 +47,12 @@
 	--button-hover-color: var(--color-white);
 	--button-hover-text-decoration: none;
 	--button-hover-background: var(--color-primary);
+	--header-padding: 4rem 0 0;
+	--header-logo-position: relative;
+	--header-logo-link-display: inline-block;
+	--header-logo-link-position: absolute;
+	--header-logo-link-top: -1rem;
+	--header-logo-link-left: 0;
 }
 
 *, *:before, *:after {
@@ -280,4 +286,19 @@ ul.row {
 
 .social-link > svg {
 	fill: var(--text-color);
+}
+
+.header {
+	padding: var(--header-padding);
+}
+
+.header-logo {
+	position: var(--header-logo-position);
+}
+
+.header-logo a {
+	display: var(--header-logo-link-display);
+	position: var(--header-logo-link-position);
+	top: var(--header-logo-link-top);
+	left: var(--header-logo-link-left);
 }
