--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -37,7 +37,7 @@
 	--nav-item-letter-spacing: 0.04rem;
 	--nav-item-display: inline-block;
 	--nav-item-margin: 0 0 3rem 0;
-	--nav-item-link-hover: var(--color-primary);
+	--nav-item-link-hover: var(--color-white);
 	--button-display: inline-block;
 	--button-padding: 1.5rem 3rem;
 	--button-border: 0.2rem solid var(--color-primary);
@@ -227,6 +227,21 @@ h1, h2, h3, h4, h5, h6 {
 	letter-spacing: var(--nav-item-letter-spacing);
 	display: var(--nav-item-display);
 	margin: var(--nav-item-margin);
+}
+
+.nav .nav-link::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: var(--color-white);
+	width: 0;
+	height: 0.20rem;
+}
+
+.nav .nav-item:hover .nav-link::before {
+	background-color: var(--color-primary);
+	width: 100%;
 }
 
 .nav .nav-link {
