Update card-work image size in CSS

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -154,7 +154,7 @@ h1, h2, h3, h4, h5, h6 {
 	overflow: hidden;
 }
 
-.card-work .card-image {
+.card-work .card-image img {
 	height: 30rem;
 	width: 100%;
 	object-fit: cover;
