--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -53,6 +53,8 @@
 	--header-logo-link-position: absolute;
 	--header-logo-link-top: -1rem;
 	--header-logo-link-left: 0;
+	--transition-duration: .3s;
+	--transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
 *, *:before, *:after {
@@ -102,6 +104,8 @@ a:active {
 	color: var(--button-hover-color);
 	text-decoration: var(--button-hover-text-decoration);
 	background: var(--button-hover-background);
+	transition-duration: var(--transition-duration);
+	transition-property: var(--button-text-decoration);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -175,12 +179,22 @@ h1, h2, h3, h4, h5, h6 {
 	vertical-align: bottom;
 }
 
+.card-work:hover .card-image img {
+	transform: scale(1.2);
+	transition: var(--transition-duration) var(--transition-cubic-bezier);
+}
+
+.card-work:hover .card-outer {
+	transform: scale(0.95);
+}
+
 .card-work .card-inner {
 	position: absolute;
 	top: -0.1rem;
 	left: -0.1rem;
 	right: -0.1rem;
 	z-index: 1;
+	transform: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-inner {
@@ -302,6 +316,7 @@ h1, h2, h3, h4, h5, h6 {
 	background-color: var(--color-white);
 	width: 0;
 	height: 0.2rem;
+	transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .nav .nav-item:hover .nav-link::before {
