--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -194,7 +194,7 @@ h1, h2, h3, h4, h5, h6 {
 	left: -0.1rem;
 	right: -0.1rem;
 	z-index: 1;
-	transform: var(--transition-duration) var(--transition-cubic-bezier);
+	transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-inner {
