--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -105,7 +105,7 @@ a:active {
 	text-decoration: var(--button-hover-text-decoration);
 	background: var(--button-hover-background);
 	transition-duration: var(--transition-duration);
-	transition-property: var(--button-text-decoration);
+	transition-property: color, background-color;
 }
 
 h1, h2, h3, h4, h5, h6 {
